=====================================================================
	Change Log
	phpGedView

	This and other information can be found online at
	http://www.phpgedview.net

	# $Id$
=====================================================================


Version 4.2.0 CA
 - Changed: File names shnote.php, shnotelist.php, class_shnote.php to note.php, notelist.php, class_note.php. (windmillway)
 - Changed: Changed wording "shnote" to "shared_note" in all language files and references (windmillway)
 - Changed: Prevent (for now) [+]Add Shared Note menu appearing under add "Regular" NOTE menu (windmillway)
 - Changed: Corrected error in SQL in auto-complete feature for Shared Note edit field. (windmillway)
 - Merged: Merge changes r5091 - r5095 from the trunk. (windmillway)
 - Added: auto-complete feature to Shared Note edit field (windmillway)
 - Merged: Merge changes r5085 - r5090 from the trunk, fix: deletion of links to deleted notes. (fisharebest)
 - Merged: Merge changes r5074 - r5084 from the trunk. (windmillway)
 - Changed: Shared Notes: Minor adjustments to edit window size, Fixed error when user does not have Accept Change Auth. (windmillway)
 - Changed: Fixed delete Shared Note on Edit Options on shnote.php page (windmillway)
 - Changed: shnote.php - Hide Edit link when not logged in, cleaned up JavaScript code to conform with PGV norms. (windmillway)
 - Changed: Tidy up of Shared Note Viewing (windmillway)
 - Changed: Improved Shared/Linked Notes handling - add sh_note/edit sh_note/find link/add link/delete link. Only delete shared note remains. (windmillway)
 - Changed: Improved Shared Note "detection for formatting" a little more (windmillway)
 - Merged: Merge changes r5063 - r5073 from the trunk. (windmillway)
 - Added: Theme dependant note.gif and addnote.gif to each respective theme (windmillway)
 - Fixed: Census Assistant error. Corrected function getCensBirthPlace() in class_person.php (windmillway)